Passed data to another activity via intents

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,9 @@
 <resources>
     <string name="app_name">Layouts</string>
-    <string name="enter">Enter</string>
+    <string name="enter">Clear</string>
     <string name="login">Login</string>
     <string name="textview">Lorem ipsum text goes here...</string>
     <string name="username">Enter username...</string>
     <string name="password">Enter password...</string>
+    <string name="welcome2msg">Welcome </string>
 </resources>
