--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="username">Enter username...</string>
     <string name="password">Enter password...</string>
     <string name="welcome2msg">Welcome </string>
+    <string name="goback">Go Back</string>
 </resources>
