--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">List views</string>
+    <string name="app_name">Recycler View</string>
     <string name="textview">Lorem ipsum text goes here...</string>
     <string name="welcome2msg">Welcome </string>
     <string name="goback">Go Back</string>
