Layout to add a chore and chore model class

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="textview">Lorem ipsum text goes here...</string>
     <string name="welcome2msg">Welcome </string>
     <string name="goback">Go Back</string>
+    <string name="enter_a_chore">Enter a chore</string>
+    <string name="assigned_to">assigned to...</string>
+    <string name="assigned_by">assigned by...</string>
 </resources>
