--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,17 @@
 <resources>
-    <string name="app_name">My Chat</string>
-    <string name="Welcome">Welcome to My Chat</string>
-    <string name="textview">My Android chat app using Firebase...</string>
+    <string name="app_name">MyChatApp</string>
+    <string name="welcome_text">Welcome to Whatsup clone!</string>
+    <string name="have_account">Already Have Account</string>
+    <string name="need_account">Need a New Account?</string>
+    <string name="create_act">Create a New Account</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="logout">Logout</string>
+    <string name="settings">Settings</string>
+    <string name="change_pic">Change Picture</string>
+    <string name="change_status">Change Status</string>
+
+    <string name="Welcome">Welcome to my messenger!!</string>
+    <string name="logo" />
 </resources>
